second section in about page

--- a/src/Pages/About.css
+++ b/src/Pages/About.css
@@ -132,3 +132,99 @@ font-size: 24px;
     display: none;
   }
 }
+
+
+.about-page {
+  width: 100%;
+  min-height: 100vh;
+  background-image: url("../Images/lightbackground.svg"); /* <-- put your texture image here */
+  background-size: cover;
+  background-repeat: repeat;
+  background-position: center;
+  display: flex;
+  padding: 60px 80px;
+  box-sizing: border-box;
+}
+
+/* Left section */
+.left-section {
+  width: 40%;
+}
+
+.title {
+  font-size: 60px;
+  font-family: "Dancing Script", cursive;
+  margin-bottom: 40px;
+}
+
+.timeline-item {
+  display: flex;
+  align-items: flex-start;
+  margin-bottom: 35px;
+  gap: 12px;
+}
+
+.dot {
+  width: 14px;
+  height: 14px;
+  background-color: #ff7777;
+  border-radius: 50%;
+  margin-top: 6px;
+}
+
+.year {
+  font-size: 20px;
+  opacity: 0.7;
+  margin: 0;
+}
+
+.desc {
+  margin: 3px 0 0;
+  font-size: 20px;
+}
+
+/* Right section */
+.right-section {
+  width: 60%;
+  position: relative;
+}
+
+.about-text {
+  font-size: 120px;
+    font-family: "Comforter", cursive;
+  font-weight: 400;
+  font-style: normal;
+  color: #000000;
+  /* opacity: 0.15; */
+  position: absolute;
+  right: 150px;
+}
+
+.about-text.top {
+  top: -20px;
+}
+
+.about-text.bottom {
+  top: 120px;
+}
+
+/* Circular images row */
+.images-row {
+  margin-top: 200px;
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.circle {
+  width: 180px;
+  height: 180px;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.circle img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
