--- a/src/Components/Nav.css
+++ b/src/Components/Nav.css
@@ -18,19 +18,12 @@
   width: 4%;
 }
 
-.nav-links {
+.nav-linkss {
   list-style: none;
   display: flex;
-  gap: 40px;
+  gap: 30px;
   font-size: 18px;
   cursor: pointer;
   color: #000000;
 }
-.nav-links:hover {
-  list-style: none;
-  display: flex;
-  gap: 40px;
-  font-size: 18px;
-  cursor: pointer;
-  color: #F87171;
-}
+
